<resources>
    <string name="app_name">橙Wallet</string>
    <string name="main_tag_consult">发现</string>
    <string name="main_tab_wallet">钱包</string>
    <string name="main_tab_my">我的</string>
    <string name="exit_confirm">确认退出？</string>
    <string name="tip">提示</string>
    <string name="tip_update">更新提示</string>
    <string name="confirm">确认</string>
    <string name="attention">注意</string>
    <string name="kick_logout">您的账号已在其他终端登录,重新登录</string>
    <string name="deal">交易</string>
    <string name="good">好评</string>
    <string name="trust">信任</string>
    <string name="build_type">环境切换</string>
    <string name="property_eth">以太币资产(ETH)</string>
    <string name="property_btc">比特币资产(BTC)</string>
    <string name="freeze">冻结</string>
    <string name="wallet_charge_my_address">我的比特币收款地址</string>
    <string name="wallet_charge_address_copy">(点击复制地址)</string>
    <string name="wallet_charge_address">地址</string>
    <string name="wallet_withdraw_balance">可用余额</string>
    <string name="wallet_withdraw_address">接收地址</string>
    <string name="wallet_withdraw_address_input_hint">请粘贴地址或扫码录入</string>
    <string name="wallet_withdraw_amount">提币数量</string>
    <string name="wallet_withdraw_free">手续费\u3000</string>
    <string name="wallet_withdraw_tip">手续费将在提币金额中扣除</string>
    <string name="wallet_withdraw_confirm">确认提币</string>
    <string name="wallet_withdraw_order_title">提币订单</string>
    <string name="wallet_withdraw_order_none">暂无提现记录</string>
    <string name="wallet_title">我的资产</string>
    <string name="wallet_assets">总资产(%s)</string>
    <string name="wallet_frozen_0">冻结0</string>
    <string name="wallet_charge">充币</string>
    <string name="wallet_withdraw">提币</string>
    <string name="wallet_bill">账单</string>
    <string name="bill_type_all">全部</string>
    <string name="bill_type_charge">充币</string>
    <string name="bill_type_withdraw">提现</string>
    <string name="bill_type_withdrawfee">取现手续费</string>
    <string name="bill_type_withdrawfrozen">取现冻结</string>
    <string name="bill_type_withdrawunfrozen">取现解冻</string>
    <string name="bill_type_select">筛选</string>
    <string name="bill_title_all">余额明细</string>
    <string name="bill_title_charge">充值明细</string>
    <string name="bill_title_withdraw">提币明细</string>
    <string name="bill_title_frozen">冻结明细</string>
    <string name="bill_none">暂无记录</string>
    <string name="bill_all_none">暂无余额明细</string>
    <string name="bill_charge_none">暂无充值明细</string>
    <string name="bill_withdraw_none">暂无提币明细</string>
    <string name="bill_frozen_none">暂无冻结明细</string>
    <string name="wallet_title_bill_detail">账单详情</string>
    <string name="wallet_bill_detail_before">变动前金额</string>
    <string name="wallet_bill_detail_after">变动后金额</string>
    <string name="wallet_bill_detail_date">变动时间</string>
    <string name="wallet_bill_detail_status">明细状态</string>
    <string name="wallet_bill_detail_type">明细摘要</string>
    <string name="wallet_title_bill_list">账单</string>
    <string name="wallet_title_charge">充币</string>
    <string name="wallet_charge_recode">记录</string>
    <string name="wallet_charge_address_copy_success">地址已复制</string>
    <string name="wallet_title_withdraw">提币</string>
    <string name="wallet_withdraw_address_hint">请输入发送地址</string>
    <string name="wallet_withdraw_amount_hint">请输入数量</string>
    <string name="wallet_withdraw_success">提现申请成功</string>
    <string name="wallet_transfer_success">转账申请成功</string>
    <string name="wallet_none">暂无钱包</string>
    <string name="market_quantity">量</string>
    <string name="deal_type_select_tip">请选择交易类型</string>
    <string name="popup_scan">扫描二维码</string>
    <string name="popup_paste">粘贴地址</string>
    <string name="copy_tip_none">您还没有复制内容</string>
    <string name="qrcode_parsing_failure">解析二维码失败</string>
    <string name="camera_refused">已拒绝打开相机</string>
    <string name="order_status_daishenpi">待审批</string>
    <string name="order_status_butongguo">审批不通过</string>
    <string name="order_status_daiguangbo">审批通过待广播</string>
    <string name="order_status_guangbozhong">广播中</string>
    <string name="order_status_shibai">广播失败</string>
    <string name="order_status_chenggong">广播成功</string>
    <string name="address_attestation">已认证</string>
    <string name="address_unattestation">未认证</string>
    <string name="user_title_address_add">添加地址</string>
    <string name="user_title_address_add_success">添加地址成功</string>
    <string name="user_address_tag_hint">请输入地址标签</string>
    <string name="user_address_hint">请输入地址</string>
    <string name="user_title_address">地址管理</string>
    <string name="user_address_none">暂无地址</string>
    <string name="user_address_delete_confirm">您确定要删除该地址吗？</string>
    <string name="user_address_delete_success">删除成功</string>
    <string name="user_title_language">语言设置</string>
    <string name="user_language_english">English</string>
    <string name="user_language_simplified">中文简体</string>
    <string name="user_language_traditional">中文繁体</string>
    <string name="user_title_google">谷歌验证</string>
    <string name="user_google_open">已开启</string>
    <string name="user_google_close">未开启</string>
    <string name="user_google_btn_open">开启谷歌验证</string>
    <string name="user_google_btn_close">关闭谷歌验证</string>
    <string name="user_google_btn_modify">修改谷歌验证</string>
    <string name="user_title_join">加入社群</string>
    <string name="user_title_wallet">钱包设置</string>
    <string name="user_title_invite_history">推荐历史</string>
    <string name="invite_history_none">暂无推荐历史</string>
    <string name="user_title_published">我的广告</string>
    <string name="user_published_none">暂无发布</string>
    <string name="user_title_setting">安全设置</string>
    <string name="user_identity_success">您已通过实名认证</string>
    <string name="user_title_person">个人主页</string>
    <string name="user_title_tip">个性设置</string>
    <string name="user_title_sign_in">登  录</string>
    <string name="user_mobile_hint">请输入手机号码</string>
    <string name="user_mobile_format_hint">手机号码格式不正确</string>
    <string name="user_password_format_hint">密码长度不能小于6位</string>
    <string name="user_title_trust">受信任的</string>
    <string name="user_trust_none">暂无信任人</string>
    <string name="user_title_sign_up">注  册</string>
    <string name="user_sign_up_protocol">注册协议</string>
    <string name="user_nick_hint">请设置您的昵称</string>
    <string name="user_code_hint">请输入验证码</string>
    <string name="user_code_format_hint">验证码格式不正确</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="user_repassword_hint">请确认密码</string>
    <string name="user_repassword_two_hint">两次输入的密码不相同</string>
    <string name="user_protocol_hint">请阅读并同意条款</string>
    <string name="user_sign_up_success">注册成功,为您自动登录</string>
    <string name="user_sign_up_failure">注册失败</string>
    <string name="user_sign_in_mobile_hint">请输入手机号</string>
    <string name="user_sign_in_confirm">确认登录</string>
    <string name="user_sign_in_forget">忘记密码?</string>
    <string name="user_sign_up_nick">昵称</string>
    <string name="user_sign_up_nick_hint">请设置您的昵称</string>
    <string name="user_sign_up_mobile">手机号</string>
    <string name="user_sign_up_mobile_hint">请输入手机号码</string>
    <string name="user_sign_up_code">手机验证码</string>
    <string name="user_sign_up_code_hint">请输入验证码</string>
    <string name="user_sign_up_send">获取验证码</string>
    <string name="user_sign_up_pwd">新密码</string>
    <string name="user_sign_up_pwd_hint">不少于6位</string>
    <string name="user_sign_up_repwd">确认密码</string>
    <string name="user_sign_up_repwd_hint">不少于6位</string>
    <string name="user_sign_up_agree">我已阅读并同意</string>
    <string name="user_sign_up_profile">《注册协议》</string>
    <string name="user_sign_up_confirm">确认注册</string>
    <string name="user_address_add_address">提币地址</string>
    <string name="user_address_add_code">手机验证码</string>
    <string name="user_address_add_code_hint">请输入验证码</string>
    <string name="user_address_add_is_default">将该账户设置为认证账户</string>
    <string name="user_address_add_tip">向认证账户提现不再输入资金密码、谷歌验证码</string>
    <string name="user_title_email_bind">绑定邮箱</string>
    <string name="user_title_email_modify">修改邮箱</string>
    <string name="user_email_bind_success">绑定成功</string>
    <string name="user_email_modify_success">修改成功</string>
    <string name="user_email">邮箱</string>
    <string name="user_email_hint">请输入邮箱</string>
    <string name="user_email_code">邮箱验证码</string>
    <string name="user_email_code_hint">请输入邮箱验证码</string>
    <string name="user_google_key">密钥</string>
    <string name="user_google_copy">复制</string>
    <string name="user_google_paste">粘贴</string>
    <string name="user_password_old">原密码</string>
    <string name="user_password_old_hint">请输入原密码</string>
    <string name="user_password_new">新密码</string>
    <string name="user_password_new_hint">不少于6位</string>
    <string name="user_password_re">确认密码</string>
    <string name="user_password_re_hint">不少于6位</string>
    <string name="user_password_title">修改密码</string>
    <string name="user_password_pwdold_hint">请输入原密码</string>
    <string name="user_password_google_hint">请输入谷歌验证码</string>
    <string name="user_password_pwdnew_hint">请输入新密码</string>
    <string name="user_password_repwd_hint">请重新输入密码</string>
    <string name="user_password_pwdnew_format_hint">密码不少于6位</string>
    <string name="user_password_repwd_format_hint">两次密码输入不一致</string>
    <string name="user_password_success">密码修改成功</string>
    <string name="user_password_failure">密码修改失败</string>
    <string name="user_password_google">谷歌验证码</string>
    <string name="user_password_google_paste">粘贴</string>
    <string name="user_setting_trade_pwd">交易密码</string>
    <string name="user_setting_identity">身份认证</string>
    <string name="user_setting_mail">绑定邮箱</string>
    <string name="user_setting_mobile">修改手机号</string>
    <string name="user_setting_password">修改登录密码</string>
    <string name="user_setting_google">谷歌验证</string>
    <string name="user_setting_sign_out">退出登录</string>
    <string name="user_tip_language">语言设置</string>
    <string name="user_address_add">添加新地址</string>
    <string name="user_address">我的地址</string>
    <string name="user_setting">系统设置</string>
    <string name="user_tip">个性设置</string>
    <string name="user_issue">帮助中心</string>
    <string name="user_services">联系客服</string>
    <string name="user_about">关于我们</string>
    <string name="user_about_update">更新至最新版本</string>
    <string name="user_about_updated">已经是最新版本</string>
    <string name="user_sign_up_referee">推荐人手机</string>
    <string name="user_sign_up_referee_hint">推荐人手机号(选填)</string>
    <string name="user_invite_url">分享链接</string>
    <string name="user_invite_pic">分享二维码</string>
    <string name="email_code_send_success">验证码已经发送至邮箱，请注意查收</string>
    <string name="email_code_send_failure">邮箱验证码发送失败</string>
    <string name="sms_code_title">手机验证码</string>
    <string name="sms_code_send">获取验证码</string>
    <string name="sms_code_hint">请输入短信验证码</string>
    <string name="trade_code_hint">请输入资金密码</string>
    <string name="google_code_title">谷歌验证码</string>
    <string name="google_code_hint">请输入谷歌验证码</string>
    <string name="google_code_format_hint">请输入正确的谷歌验证码</string>
    <string name="user_about_copyright">2019Wallet版权所有</string>
    <string name="coin_eth">以太币</string>
    <string name="coin_btc">比特币</string>
    <string name="biz_type_charge">充值</string>
    <string name="biz_type_withdraw">取现</string>
    <string name="biz_type_tradefee">交易手续费</string>
    <string name="address">地址</string>
    <string name="now_register">立即注册</string>
    <string name="register">注册</string>
    <string name="copy_money_address">复制收款地址</string>
    <string name="my_coin_address_2">我的收款地址</string>
    <string name="save_qrimg">保存二维码</string>
    <string name="signup_by_mobile">手机注册</string>
    <string name="signup_by_email">邮箱注册</string>
    <string name="user_sign_in_pwd_hint">请输入密码（6～16个字符或字母组成）</string>
    <string name="activity_paypwd_mobile_hint">请输入手机号</string>
</resources>