<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tl_way"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:tabIndicatorColor="@color/colorPrimary"
                    app:tabIndicatorHeight="2.4dp"
                    app:tabSelectedTextColor="@color/colorPrimary">

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_by_mobile"
                        android:textSize="18sp" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_by_email"
                        android:textSize="18sp" />

                </android.support.design.widget.TabLayout>

                <com.cdkj.token.views.SignInEditClearLayout
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hint_text="@string/user_sign_in_mobile_hint"
                    app:is_show_clear="false"
                    app:is_show_split_line="false" />

                <com.cdkj.token.views.SignInEditClearLayout
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    app:hint_text="@string/user_email_hint"
                    app:is_show_clear="false"
                    app:is_show_split_line="false" />

                <com.cdkj.token.views.SignInEditClearCodeLayout
                    android:id="@+id/edt_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hint_text="@string/user_address_add_code_hint"
                    app:is_show_clear="false"
                    app:is_show_split_line="false" />

                <com.cdkj.token.views.SignInEditClearLayout
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hint_text="@string/user_sign_in_pwd_hint"
                    app:is_show_clear="false"
                    app:is_show_split_line="false" />

                <com.cdkj.token.views.SignInEditClearLayout
                    android:id="@+id/edt_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hint_text="@string/user_repassword_hint"
                    app:is_show_clear="false"
                    app:is_show_split_line="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_agree"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="0.5dp"
                        android:padding="5dp"
                        android:src="@mipmap/sign_agree" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_sign_up_agree"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tv_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_sign_up_profile"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_normal_blue_btn"
                    android:gravity="center"
                    android:text="@string/user_title_sign_up"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</layout>