<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/splitLine_color" />

        <LinearLayout
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.cdkj.token.views.SignInEditClearLayout
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                app:is_show_clear="false"
                app:is_show_split_line="false"
                android:layout_height="wrap_content"
                app:hint_text="@string/user_email_hint" />

            <com.cdkj.token.views.SignInEditClearCodeLayout
                android:id="@+id/edt_code"
                app:is_show_clear="false"
                app:is_show_split_line="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hint_text="@string/user_address_add_code_hint" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_f7f7f7" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_normal_blue_btn"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</layout>