<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_tha"
                    android:layout_width="108dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="43dp"
                    android:src="@drawable/icon_sign_in" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginTop="45dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="欢迎回来"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="22sp" />


                        <com.cdkj.token.views.SignInEditClearCountryCodeLayout
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            app:hint_text="@string/user_sign_in_mobile_hint" />

                        <com.cdkj.token.views.SignInEditClearRightTextLayout
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            app:hint_text="@string/user_sign_in_pwd_hint" />

                        <com.cdkj.token.views.SignInEditClearCodeLayout
                            android:id="@+id/edt_code"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            app:hint_text="@string/user_sign_up_code_hint" />

                        <Button
                            android:id="@+id/btn_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="35dp"
                            android:background="@drawable/shape_normal_blue_btn"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/user_title_sign_in"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_to_sign_up"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black"
                                android:text="@string/now_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="10dp"/>

                            <TextView
                                android:id="@+id/tv_forget"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black"
                                android:text="@string/user_sign_in_forget"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>



            </LinearLayout>

        </FrameLayout>



    </ScrollView>

</layout>
