<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF6EB"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tv_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="BTC钱包地址禁止充值除BTC之外额其它资产,任何BTC资产充值将不可找回"
                    android:textColor="#F59218"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_close_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@mipmap/user_invite_close" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="26dp"
                android:gravity="center"
                android:text="@string/my_coin_address_2"
                android:textColor="@color/gray_333333"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/icon_qr_code_bg">

                <android.support.v7.widget.CardView
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/img_QRCode"
                        android:layout_width="190dp"
                        android:layout_height="190dp"
                        android:layout_gravity="center" />

                </android.support.v7.widget.CardView>


            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="26dp"
                android:text="@string/address"
                android:textColor="@color/gray_666666"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="#FDFDFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray_666666"
                    android:textSize="14sp"
                    tools:text="sdfsfsdfsfsdfsdf" />


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="25dp">

                <Button
                    android:id="@+id/btn_copy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/shape_normal_blue_btn"
                    android:text="@string/copy_money_address"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_save_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape_normal_blue_btn"
                    android:text="@string/save_qrimg"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>
